
AM_CFLAGS=@SDLMIXER_CFLAGS@

noinst_LIBRARIES=libpcsound.a

libpcsound_a_SOURCES =                            \
        pcsound.c           pcsound.h             \
        pcsound_bsd.c                             \
        pcsound_sdl.c                             \
        pcsound_linux.c                           \
        pcsound_win32.c                           \
                            pcsound_internal.h

