
OSX_FILES=                                                              \
osx/Resources/128x128.png                                               \
osx/Resources/app.icns                                                  \
osx/Resources/app.png                                                   \
osx/Resources/wadfile.icns                                              \
osx/Resources/wadfile.png                                               \
osx/Resources/launcher.nib/designable.nib                               \
osx/Resources/launcher.nib/keyedobjects.nib                             \
osx/disk/dir.DS_Store                                                   \
osx/disk/background.png                                                 \
osx/GNUmakefile                                                         \
osx/Info.plist.in       osx/Info-gnustep.plist.in                       \
osx/PkgInfo                                                             \
osx/cp-with-libs                                                        \
osx/dmgfix                                                              \
osx/main.m                                                              \
osx/AppController.m     osx/AppController.h                             \
osx/Execute.m           osx/Execute.h                                   \
osx/IWADController.m    osx/IWADController.h                            \
osx/IWADLocation.m      osx/IWADLocation.h                              \
osx/LauncherManager.m   osx/LauncherManager.h

WINCE_FILES=                                                            \
wince/GNUmakefile                                                       \
wince/wince-cab.cfg                                                     \
wince/wince-cabgen

WIN32_FILES=                                                            \
win32/GNUmakefile                                                       \
win32/README

EXTRA_DIST=$(OSX_FILES) $(WINCE_FILES) $(WIN32_FILES)

